   can be directly included by ". ./PATH/setup.sh" or  "CALL PATH\setup.bat"
   to get the settings as script variables.
 - Cygwin (Windows) DDLs updated.
 - Title data base updated.


wit v2.21b r4492 - 2013-06-15

 - Bug fix: wit DOLPATCH: Reading 'offset' failed on 32 bit systems.


wit v2.22a r4516 - 2013-06-22

 - Command "wit DOLPATCH" accepts now more commands and is able to create new
   TEXT and DATA sections.
   -> Read http://wit.wiimm.de/cmd/wit/dolpatch for details.
 - New option: --tt-id=ID: This is a short cut for '--ticket=ID --tmd=ID'.
   If TICKET and TMD differ, the game will freeze after loading. So it make
   sense to change only TICKET and TMD IDs together.
 - Bug fix, if using "wit COPY --name discname" and the destination is %X or
   similar: The new discname is now used to create the filename.


@@MODULE(last-history.txt)@@

~
~Road map (for some point in the future):
~
~ I have already stopped the development in favor of my SZS tools. But there
~ are some already planned extensions:
~
~ - GameCube support is still incomplete.
~    - Creation of GameCube disc is not possible.
~
~ - There are already code fragments implemented to trim discs in three levels:
~    - Move partitions as whole to eliminate disc holes.
~    - Move partition sectors to reduce partition size (alternative for
~      partition scrubbing). Fake signing is necessary.
~    - Move files of partitons to optimize the step above a little.
~   For all trimming levels alignment factors may be set and it should be
~   possible to set special alignments for GameCube sound files.
~
~ - On the fly patching: Create a new image as combination of 2 or more sources.
~   Therefor trimming (sector or file level) is needed.
~

*******************************************************************************
*******                              END                                *******
*******************************************************************************