@@ -87,7 +87,7 @@ const InfoOption_t OptionInfo[OPT__N_TOTAL+1] =
 
     {	OPT_RECURSE, 'r', "recurse",
 	"path",
-	" If path is not a directory then it is used as a simple source file"
+	" If path is not a directory, then it is used as a simple source file"
 	" like --source.\n"
 	"  Directories are scanned for source files recursively. The option"
 	" --rdepth limits the search depth. Hidden files and hidden sub"
@@ -893,7 +893,7 @@ const InfoOption_t OptionInfo[OPT__N_TOTAL+1] =
 	"char",
 	"Define an alternative escape character for destination files. The"
 	" default is '%'. For Windows (CYGWIN) it is a good choice to set"
-	" '-E$'."
+	" '-E$' to avoid conflicts with command shell variables."
     },
 
     {	OPT_IO, 0, "io",
