@@ -111,80 +111,6 @@ are listed in alphabetic order:
 
 -------------------------------------------------------------------------------
 @@EXEC(./wwt help --width 80 ANALYZE)@@
-~ [2do] copy to homepage
-
- The ANALYZE command analyze files and partitions and prints out the geometry.
- The files are not modified and opened readonly.
-
- First ANALYZE looks into the file and search for old WBFS information. Second
- it makes a calculation like the INIT command for different sector sizes.
-
- All data is printed as a table:
-
-    ANALYZE x.wbfs
-    ------------------------------------------------------------------------------------
-                        HD SECTORS  WBFS SECTORS   DISCS       (all values in hex)
-               WBFS     total  sec  total    sec  max inode
-    NAME    magic vrs     num size   num    size  num size  ADDITIONAL INFORMATION
-    ------------------------------------------------------------------------------------
-    HEADER:    ok  1 746a5288  200  e8d4 1000000  1f4  600  WBFS header scanning
-    INODE-TIM: ok  1 746a5288  200  e8d4 1000000  1f4  600  2010-03-24 18:50:50 n=500
-    INODE-CNT: ok  1 1d1a94a2  800  e8d4 1000000  7f4  800  2010-03-24 18:50:47 n=1661
-    CALC  512:  -  1 746a5288  200  e8d4 1000000  1f4  600  calculation of init function
-    CALC 1024:  -  1 3a352944  400  e8d4 1000000  3f4  800   " but sector-size=1024
-    CALC 2048:  -  1 1d1a94a2  800  e8d4 1000000  7f4  800   " but sector-size=2048
-    CALC 4096:  -  1  e8d4a51 1000  e8d4 1000000  ff4 1000   " but sector-size=4096
-    ------------------------------------------------------------------------------------
-
- The columns (all numbers are printed in hex):
- 
-    NAME
-        Short name of the analyze mode.
-        - HEADER:  Result of header analyzing (first 12 bytes).
-        - INODE-*: Result of INODE-INFO searching.
-            - INODE-TIM: The newest INODE found.
-            - INODE-CNT: The inodes with the largest equal-inodes-count.
-            - INODE-1ST: The first inodes found if not already printed.
-        - DISCS:   Result of searching discs in the WBFS management area.
-        - CALC #:  Example calculation of the INIT function. (see option --long)
-        - OLD #:   Example calculation with the old buggy algorithm. (see option --long)
-
-    WBFS magic:
-        "ok" if a WBFS magic was found.
-
-    WBFS vrs:
-        WBFS version.
-
-    HD SECTORS total num:
-        Total number of HS sectors of the file/partition.
-
-    HD SECTORS sec size:
-        The harddisk sector size of the file/partition.
-
-    WBFS SECTORS total num:
-        Total number of WBFS sectors. The maximum if 0x10000 = 65536.
-
-    WBFS SECTORS sec size:
-        The WBFS sector size of the file/partition.
-        
-    DISCS max num:
-        Maximal possible discs.
-
-    DISCS inode size:
-        The disc info size for a single disc.
-
-    ADDITIONAL INFORMATION:
-        Additiional informaton.
-        - INODE: most current date and number of equal inodes infos found.
-        - DISCS: number of discs found in the management area of WBFS.
-
- The output can also be used to setup parameters for the INIT command.
-
-
- Usual ERROR/EXIT CODES:
-
-    0 == OK             : all done without errors.
-    SYNTAX ERROR        : at least one syntax error in command line found.
 
 
 -------------------------------------------------------------------------------
